Initialized budgets functionality and view

--- a/PFT/Views/Shared/_Layout.cshtml
+++ b/PFT/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/PFT.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Dashboard.css" />
     <link rel="stylesheet" href="~/css/Investments.css" />
+    <link rel="stylesheet" href="~/css/Budgets.css" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
@@ -29,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Transactions">Transactions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Budgets">Budgets</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Budgets" asp-action="Budgets">Budgets</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Investments" asp-action="Investments">Investments</a>
