--- a/PFT/Views/Shared/_LoginPartial.cshtml
+++ b/PFT/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<PFT.Identity.PFTUser> SignInManager
+@inject UserManager<PFT.Identity.PFTUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
