--- a/PFT/wwwroot/css/site.css
+++ b/PFT/wwwroot/css/site.css
@@ -28,6 +28,18 @@ body {
     background:#353535;
 }
 
+h2{
+    color:white;
+}
+
+p{
+    color:white;
+}
+
+hr{
+    color:white;
+}
+
 a{
     color:white;
 }
