Added budget view representation and refresh data method

--- a/PFT/wwwroot/css/Budgets.css
+++ b/PFT/wwwroot/css/Budgets.css
@@ -2,8 +2,11 @@
 }
 
 .budget-instance {
-    background:red;
-    width:40vw;
+    background: #ade8f4;
+    border-radius: 20px;
+    width: 40vw;
+    margin: 1vh 1vw;
+    color: black;
 }
 
 .budget-instance > progress {
