--- a/PFT/Views/Budgets/Budgets.cshtml
+++ b/PFT/Views/Budgets/Budgets.cshtml
@@ -13,7 +13,8 @@
 }
 
 <div class="content">
-    <h1 class="display-4">Budgets</h1>
+    <h1 class="page-title">Budgets</h1>
+    <button id="refresh-budgets-button">Refresh</button>
 
     <div id="budgets-container" data-refresh-url="@Url.Action("RefreshData", "Budgets")">
         @await Html.PartialAsync("_BudgetsViewPartial", Model)
