--- a/PFT/Views/Budgets/_BudgetsViewPartial.cshtml
+++ b/PFT/Views/Budgets/_BudgetsViewPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PFT.Models.Budgets.BudgetsModel
 
-<div>
+<div class="main-content">
     @foreach(KeyValuePair<string, PFT.Models.Budgets.Budget> entry in Model.GetBudgets())
     {
         var budgetName = entry.Value.Name;
@@ -23,7 +23,7 @@
         <div class="budget-instance">
             <div class="budget-data">
                 <h2>@budgetName</h2>
-                <h3> <span>€@budgetAmount</span><span> @timeframe</span></h3>
+                <h3><span>€@budgetAmount</span><span> @timeframe</span></h3>
             </div>
             <progress class="budget-progress" max="100" value="@entry.Value.CurrentlySpent">@percentageSpent</progress>
         </div>
