--- a/PFT/Views/Investments/Investments.cshtml
+++ b/PFT/Views/Investments/Investments.cshtml
@@ -15,7 +15,7 @@
 }
 
 <div class="content">
-    <h1 class="display-4">Investments</h1>
+    <h1 class="page-title">Investments</h1>
     <button id="refresh-investments-button">Refresh</button>
 
     <div id="investments-tables-container" data-refresh-url="@Url.Action("RefreshData", "Investments")">
