Implemented removing investments from view and DB, parameterized command

--- a/PFT/Views/Investments/Investments.cshtml
+++ b/PFT/Views/Investments/Investments.cshtml
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         const addInvestmentUrl = '@Url.Action("AddInvestment", "Investments")';
+        const removeInvestmentUrl = '@Url.Action("RemoveInvestment", "Investments")';
      </script>
     <script src="~/js/Investments.js"></script>
 }
