--- a/PFT/Views/Budgets/Budgets.cshtml
+++ b/PFT/Views/Budgets/Budgets.cshtml
@@ -8,12 +8,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         const addBudgetUrl = '@Url.Action("AddBudget", "Budgets")';
-    </script>
+        const budgetsCollection = @Html.Raw(Json.Serialize(Model.GetBudgets()));
+
+        const budgetNames = Object.keys(budgetsCollection);
+        const budgetValues = Object.values(budgetsCollection);
+        const budgetAmounts = budgetValues.map(budget => budget.maxAmount);
+        </script>
     <script src="~/js/Budgets.js"></script>
+    <script src="~/js/BudgetCharts.js"></script>
 }
 
 <div class="content">
     <h1 class="page-title">Budgets</h1>
+    <h2 id="total-budget-text">Total budget allocated: €@Model.GetTotalBudgetValue()</h2>
     <button id="refresh-budgets-button">Refresh</button>
 
     <div id="budgets-container" data-refresh-url="@Url.Action("RefreshData", "Budgets")">
@@ -66,13 +73,22 @@
     </div>
 </div>
 
-<!-- Change Quantity Modal -->
+<!-- Change Modal -->
 <div class="budget-action-modal" data-modal="change">
     <h2>Change amount</h2>
     <div class="data-container">
         <label for="quantity">Amount:</label>
         <input type="number" id="change-amount" step="any" min="0" value="300">
     </div>
+
+    <div class="data-container">
+        <label asp-for="TimeframeToAdd" class="col-md-2 control-label">Type:</label>
+        <select id="timeframe" name="Type"
+                asp-for="TimeframeToAdd"
+                asp-items="Html.GetEnumSelectList<PFT.Models.Budgets.Timeframe>()">
+        </select>
+    </div>
+
     <div class="modal-buttons">
         <button class="cancel-button" data-modal="change">Cancel</button>
         <button class="confirm-button" data-modal="change">Confirm</button>
